--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
      	<h2 class="devtools container-fluid d-flex justify-content-center">Development Tools</h2>
          
-        <div class="logo-container mt-5  ">
+        <div class="logo-container mt-5">
 
             <div class="logo-card">
 
@@ -182,7 +182,7 @@
 <div class="p-5 text-center">
 	
 		<div class="mx-auto mt-5">
-			<img class="itask-img img-fluid mx-auto" src="./images/sanram.jpg" alt="iTask">	
+			<img class="itask-img img-fluid mx-auto" src="./images/sanram.jpg" alt="san-ram">	
 		</div>
 
 		<h3 class="align-items-center mt-3">San-Ram</h3>
