--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <div class="p-5 text-center">
 	<h3 id="projects" class="projects text-center container-fluid d-flex justify-content-center">Projects</h3>
 		<div class="mx-auto mt-5">
-			<img class="itask-img img-fluid mx-auto" src="../images/itask.JPG" alt="iTask">	
+			<img class="itask-img img-fluid mx-auto" src="./images/itask.JPG" alt="iTask">	
 		</div>
 
 		<h3 class="align-items-center mt-3">iTask</h3>
@@ -171,7 +171,7 @@
 <div class="p-5 text-center">
 	
 		<div class="mx-auto mt-5">
-			<img class="itask-img img-fluid mx-auto" src="../images/sanram.JPG" alt="san-ram">	
+			<img class="itask-img img-fluid mx-auto" src="./images/sanram.JPG" alt="san-ram">	
 		</div>
 
 		<h3 class="align-items-center mt-3">San-Ram</h3>
